k8s/api-server-clusterIpService.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-api-server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: webapp-api    
  ports:
  - port: 5000
    targetPort: 5000
