k8s/postgres-clusterIpService.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: webapp-postgres
  ports:
    - port: 5432
      targetPort: 5432
