k8s/redis-custerIpService.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: webapp-redis
  ports:
  - port: 6379
    targetPort: 6379
